feat: implement real email functionality for contact form
- Add Resend package for email delivery
- Update contact API to send real emails instead of fake responses
- Fix X-Frame-Options for PDF embedding in resume page
- Add professional HTML email template with sender details
- Configure reply-to functionality for direct responses
- Fix linting issues and remove console statements

--- a/locales/en.json
+++ b/locales/en.json
@@ -35,7 +35,7 @@
     },
     "about": {
       "title": "About Me",
-      "subtitle": "Engineer. Motion nerd. Product thinker."
+      "subtitle": "Engineer. Product thinker."
     },
     "contact": {
       "title": "Let's Connect",
@@ -43,7 +43,7 @@
     }
   },
   "about": {
-    "title": "Engineer. Motion nerd. Product thinker.",
+    "title": "Engineer. Product thinker.",
     "description1": "I craft fast, accessible interfaces with a big focus on motion, micro‑interactions, and design systems. I love turning ambiguous product ideas into polished experiences that users actually enjoy using.",
     "description2": "When I'm not coding, you'll find me exploring new technologies, contributing to open source, or perfecting my coffee brewing technique. I believe great software should feel like magic ✨",
     "availableForHire": "Available for hire! 🚀",
